GNOME Bugzilla – Bug 696546
gtk_print_backend_cups_finalize() crashes if cups_get_printer_list() is not called
Last modified: 2013-03-25 13:43:19 UTC
Created attachment 239748 [details] [review] Use g_clear_object() instead. It tries to unref the GDBusConnection that is NULL.
+ Trace 231679
Review of attachment 239748 [details] [review]: Thank you for catching this.
Comment on attachment 239748 [details] [review] Use g_clear_object() instead. Pushed to both branches.